fix: core accordion header layout overflow   - allow layout overflow for positioning content items in cds accordion headers (same fix for content and panel was applied in #5710)

--- a/packages/core/src/accordion/accordion-header.element.scss
+++ b/packages/core/src/accordion/accordion-header.element.scss
@@ -14,6 +14,7 @@
   --icon-transform: rotate(90deg);
   cursor: pointer;
   width: 100%;
+  contain: inherit;
 }
 
 .private-host {
